# bijux-genomics

./: --__bijux_invalid_flag__  .gitignore  ARCHITECTURE_LITMUS.md  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  STYLE.md  audit-allowlist.toml  clippy.toml  deny.toml  mkdocs.yml  nextest.toml
crates/bijux-analyze/: ARCHITECTURE.md  Cargo.toml  DATA_MODEL.md  README.md  SCOPE.md
crates/bijux-analyze/docs/: ARCHITECTURE.md  CHANGE_RULES.md  DATA_MODEL.md  DECISIONS.md  EFFECTS.md  FAILURE_ANALYSIS.md  INDEX.md  INTERPRETATION.md  REPORT_CONTRACT.md  SCHEMA.md  SCOPE.md  TESTS.md  contract.md
crates/bijux-analyze/src/: compare.rs  contract.rs  export.rs  facts.rs  facts_export.rs  failure.rs  lib.rs  model.rs  pipeline.rs  ranking.rs  report.rs  selection.rs  semantic.rs
crates/bijux-analyze/tests/: aggregate_metrics.rs  architecture.rs  bench_integration.rs  compare_ranking.rs  compare_stats.rs  contract_handshake.rs  contracts.rs  core_contract_tests.rs  cross_handoff.rs  dashboard_contract.rs  dashboard_facts.rs  decision.rs  decision_trace.rs  docs_report_sections.rs  fact_table.rs  facts.rs  facts_schema.rs  failure_hints.rs  fastq_trim.rs  fastq_validate.rs  file_loc_budget.rs  golden_spine.rs  guardrails.rs  load_large_facts.rs  loader_contract.rs  metric_schema.rs  metric_semantics.rs  module_file_budget.rs  no_giant_file.rs  no_raw_json.rs  performance_budget.rs  pipeline_e2e.rs  ranking_ties.rs  report.rs  report_build.rs  report_completeness_blessed.rs  report_completeness_policy.rs  report_contract.rs  report_privacy.rs  report_size_budget.rs  (+9 more)
crates/bijux-api/: API.md  Cargo.toml  Makefile.toml  README.md  SCOPE.md
crates/bijux-api/docs/: API.md  API_STABILITY.md  ARCHITECTURE.md  BOUNDARIES.md  BOUNDARY_CONTRACT.md  CHANGE_RULES.md  COMPATIBILITY_POLICY.md  EFFECTS.md  ENDPOINT_GUIDES.md  INDEX.md  REQUEST_FLOW.md  SCOPE.md  SECURITY.md  TESTS.md
crates/bijux-api/src/: api.rs  api_internal.rs  args.rs  bam_plan.rs  bam_router.rs  bam_support.rs  explain.rs  fastq_stats_neutral.rs  lib.rs  prelude.rs  qa.rs  request_args.rs  run.rs  tooling.rs
crates/bijux-api/tests/: api_stability.rs  boundaries.rs  contract_spine.rs  contracts.rs  explain_roundtrip.rs  guardrails.rs  public_policy.rs  public_surface.rs  roundtrip.rs  schema.rs  schemas.rs  surface.rs  v1_cross_api_stability.rs  v1_cross_contract_handshake.rs  v1_cross_guardrails.rs
crates/bijux-bench/: Cargo.toml
crates/bijux-bench/src/: analyze.rs  artifacts.rs  compare.rs  contract.rs  error.rs  gate.rs  lib.rs  model.rs  policy.rs  stats.rs  suite.rs  summarize.rs
crates/bijux-bench/tests/: .bench_contract.rs.pending-snap  architecture.rs  bench_contract.rs  bench_realistic_snapshot.rs  compare.rs  fastq_trim.rs  fastq_validate.rs  gate.rs  metric_schema.rs  policy_rejects_unknown_metric.rs  public_api.rs  public_api_owner.rs  stable_ordering.rs  stats.rs
crates/bijux-benchmark/: ARCHITECTURE.md  BENCH_CONTRACT.md  Cargo.toml  README.md  SCOPE.md
crates/bijux-benchmark-model/: Cargo.toml  README.md  SCOPE.md
crates/bijux-benchmark-model/docs/: ARCHITECTURE.md  CHANGE_RULES.md  DECISION_EXPLAINABILITY.md  DETERMINISM.md  EFFECTS.md  GATE_POLICY.md  INDEX.md  MODEL_GLOSSARY.md  SCOPE.md  STAT_ASSUMPTIONS.md
crates/bijux-benchmark-model/src/: error.rs  lib.rs
crates/bijux-benchmark-model/tests/: determinism.rs  guardrails.rs  public_api.rs  schemas.rs  semantics.rs
crates/bijux-benchmark/docs/: ARCHITECTURE.md  BENCH_CONTRACT.md  BENCH_FORMAT.md  CHANGE_RULES.md  EFFECTS.md  INDEX.md  LEGACY.md  REPRODUCIBILITY.md  SCOPE.md  SUITE_DESIGN.md  TESTS.md
crates/bijux-benchmark/src/: contract.rs  error.rs  legacy_fastq.rs  lib.rs  summarize.rs  summary.rs
crates/bijux-benchmark/tests/: architecture.rs  bench_contract.rs  compare.rs  contracts.rs  determinism.rs  gate.rs  guardrails.rs  public_api_owner.rs  ssot_ids.rs
crates/bijux-cli/: CLI_CONVENTIONS.md  Cargo.toml  README.md  SCOPE.md
crates/bijux-cli/docs/: ARCHITECTURE.md  BUG_REPORT.md  CHANGE_RULES.md  CLI_CONVENTIONS.md  COMMANDS.md  DRY_RUN.md  EFFECTS.md  HELP_STABILITY.md  INDEX.md  OUTPUT_FORMATS.md  README.md  SCOPE.md  TESTS.md  UX_ERRORS.md
crates/bijux-cli/src/: adapter_bank.rs  bam_router.rs  cli.rs  (+13 more)
crates/bijux-core/: ARCHITECTURE.md  Cargo.toml  PUBLIC_API.md  README.md  SCOPE.md  TESTS.md
crates/bijux-dev-dna/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md
crates/bijux-dna-analyze/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-api/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-bench/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-bench-model/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-benchmark/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-cli/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-core/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-db-ena/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-db-ref/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-dev/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-domain-bam/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-domain-compiler/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-domain-fastq/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-domain-vcf/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-engine/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-environment/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-environment-qa/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-infra/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-pipelines/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-planner-bam/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
crates/bijux-dna-planner-fastq/: BOUNDARY.md  Cargo.toml  PUBLIC_API.md  README.md
(+13758 files in other folders)
