[workspace]
resolver = "2"
members = [
  "crates/bijux-dna-analyze",
  "crates/bijux-dna-api",
  "crates/bijux-dna-benchmark",
  "crates/bijux-dna-benchmark-model",
  "crates/bijux-dna-cli",
  "crates/bijux-dna-core",
  "crates/bijux-dna-domain-bam",
  "crates/bijux-dna-domain-fastq",
  "crates/bijux-dna-engine",
  "crates/bijux-dna-environment",
  "crates/bijux-dna-environment-qa",
  "crates/bijux-dna-infra",
  "crates/bijux-dna-pipelines",
  "crates/bijux-dna-planner-bam",
  "crates/bijux-dna-planner-fastq",
  "crates/bijux-dna-policies",
  "crates/bijux-dna-runner",
  "crates/bijux-dna-runtime",
  "crates/bijux-dna-stage-contract",
  "crates/bijux-dna-stages-bam",
  "crates/bijux-dna-stages-fastq",
  "crates/bijux-dna-testkit",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.76"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing-appender = "0.2"
walkdir = "2"
regex = "1"
sha2 = "0.10"
sysinfo = "0.30"
tempfile = "3"
schemars = { version = "0.8", features = ["derive"] }
toml = "0.8"
opentelemetry = "0.24"
opentelemetry_sdk = "0.24"
insta = "1"
bijux-dna-policies = { path = "crates/bijux-dna-policies" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[profile.dev]
debug = 1
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 1

[profile.test]
debug = 1
incremental = true
codegen-units = 256

[profile.test-fast]
inherits = "test"
opt-level = 0
debug = 1
