[workspace]
resolver = "2"
members = ["crates/bijux-dna",
  "crates/bijux-dna-analyze",
  "crates/bijux-dna-api",
  "crates/bijux-dna-bench",
  "crates/bijux-dna-bench-model",
  "crates/bijux-dna-core",
  "crates/bijux-dna-db-ena",
  "crates/bijux-dna-db-ref",
  "crates/bijux-dna-dev",
  "crates/bijux-dna-domain-bam",
  "crates/bijux-dna-domain-compiler",
  "crates/bijux-dna-domain-fastq",
  "crates/bijux-dna-domain-vcf",
  "crates/bijux-dna-engine",
  "crates/bijux-dna-environment",
  "crates/bijux-dna-environment-qa",
  "crates/bijux-dna-infra",
  "crates/bijux-dna-pipelines",
  "crates/bijux-dna-planner-bam",
  "crates/bijux-dna-planner-fastq",
  "crates/bijux-dna-planner-vcf",
  "crates/bijux-dna-policies",
  "crates/bijux-dna-runner",
  "crates/bijux-dna-runtime",
  "crates/bijux-dna-science",
  "crates/bijux-dna-stage-contract",
  "crates/bijux-dna-stages-bam",
  "crates/bijux-dna-stages-fastq",
  "crates/bijux-dna-stages-vcf",
  "crates/bijux-dna-testkit",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing-appender = "0.2"
walkdir = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rayon = "1"
flate2 = "1"
tar = "0.4"
sha2 = "0.11"
sysinfo = "0.36"
tempfile = "3"
rand = "0.8"
schemars = { version = "0.8", features = ["derive"] }
toml = "0.8"
cargo_metadata = "0.18"
assert_cmd = "2"
predicates = "3"
filetime = "0.2"
fs4 = "0.13.1"
serde_yaml = "0.9"
opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
insta = "1"
noodles-bam = "0.88"
noodles-sam = "0.84"
bijux-dna-analyze = { path = "crates/bijux-dna-analyze" }
bijux-dna-api = { path = "crates/bijux-dna-api" }
bijux-dna-core = { path = "crates/bijux-dna-core" }
bijux-dna-db-ena = { path = "crates/bijux-dna-db-ena" }
bijux-dna-db-ref = { path = "crates/bijux-dna-db-ref" }
bijux-dna-domain-bam = { path = "crates/bijux-dna-domain-bam" }
bijux-dna-domain-compiler = { path = "crates/bijux-dna-domain-compiler" }
bijux-dna-domain-fastq = { path = "crates/bijux-dna-domain-fastq" }
bijux-dna-domain-vcf = { path = "crates/bijux-dna-domain-vcf" }
bijux-dna-engine = { path = "crates/bijux-dna-engine" }
bijux-dna-environment = { path = "crates/bijux-dna-environment" }
bijux-dna-infra = { path = "crates/bijux-dna-infra" }
bijux-dna-pipelines = { path = "crates/bijux-dna-pipelines" }
bijux-dna-planner-bam = { path = "crates/bijux-dna-planner-bam" }
bijux-dna-planner-fastq = { path = "crates/bijux-dna-planner-fastq" }
bijux-dna-planner-vcf = { path = "crates/bijux-dna-planner-vcf" }
bijux-dna-policies = { path = "crates/bijux-dna-policies" }
bijux-dna-runner = { path = "crates/bijux-dna-runner" }
bijux-dna-runtime = { path = "crates/bijux-dna-runtime" }
bijux-dna-stage-contract = { path = "crates/bijux-dna-stage-contract" }
bijux-dna-stages-fastq = { path = "crates/bijux-dna-stages-fastq" }
bijux-dna-stages-vcf = { path = "crates/bijux-dna-stages-vcf" }
bijux-dna-testkit = { path = "crates/bijux-dna-testkit" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[profile.dev]
debug = 1
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 1

[profile.test]
debug = 1
incremental = true
codegen-units = 256

[profile.test-fast]
inherits = "test"
opt-level = 0
debug = 1
