[package]
name = "bijux-analyze"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
tracing.workspace = true
anyhow.workspace = true
bijux-core = { path = "../bijux-core" }
bijux-domain-bam = { path = "../bijux-domain-bam" }
bijux-infra = { path = "../bijux-infra" }
sha2.workspace = true
parquet = { version = "50", optional = true, features = ["json"] }

[features]
parquet = ["dep:parquet"]

[dev-dependencies]
bijux-guardrails = { path = "../bijux-guardrails" }
tempfile.workspace = true
bijux-domain-fastq = { path = "../bijux-domain-fastq" }
bijux-bench = { path = "../bijux-bench" }
insta = { version = "1", features = ["json"] }
bijux-pipelines = { path = "../bijux-pipelines" }

[lints]
workspace = true
