[package]
name = "bijux-analyze"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
tracing.workspace = true
anyhow.workspace = true
bijux-core = { path = "../bijux-core" }
bijux-domain-bam = { path = "../bijux-domain-bam" }
bijux-domain-fastq = { path = "../bijux-domain-fastq" }
bijux-infra = { path = "../bijux-infra" }
bijux-runtime = { path = "../bijux-runtime" }
sha2.workspace = true
parquet = { version = "50", optional = true, features = ["json"] }

[features]
parquet = ["dep:parquet"]

[dev-dependencies]
bijux-policies = { path = "../bijux-policies" }
tempfile.workspace = true
bijux-domain-fastq = { path = "../bijux-domain-fastq" }
bijux-benchmark = { path = "../bijux-benchmark" }
insta = { version = "1", features = ["json"] }
bijux-pipelines = { path = "../bijux-pipelines" }
bijux-planner-fastq = { path = "../bijux-planner-fastq" }
bijux-planner-bam = { path = "../bijux-planner-bam" }
uuid.workspace = true

[lints]
workspace = true
