[package]
name = "bijux-analyze"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite = { workspace = true, optional = true }
tracing.workspace = true
anyhow.workspace = true
bijux-core = { path = "../bijux-core" }
bijux-domain-bam = { path = "../bijux-domain-bam" }
bijux-domain-fastq = { path = "../bijux-domain-fastq" }
bijux-infra = { path = "../bijux-infra" }
bijux-runtime = { path = "../bijux-runtime" }
sha2.workspace = true
parquet = { version = "50", optional = true, features = ["json"] }

[features]
parquet = ["dep:parquet"]
sqlite = ["dep:rusqlite"]

[dev-dependencies]
bijux-policies = { path = "../bijux-policies" }
uuid = { workspace = true }
tempfile.workspace = true
bijux-domain-fastq = { path = "../bijux-domain-fastq" }
insta = { version = "1", features = ["json"] }
bijux-planner-fastq = { path = "../bijux-planner-fastq" }
bijux-planner-bam = { path = "../bijux-planner-bam" }
bijux-pipelines = { path = "../bijux-pipelines" }
bijux-benchmark = { path = "../bijux-benchmark" }
walkdir.workspace = true

[lints]
workspace = true
