[package]
name = "bijux-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
bijux-core = { path = "../bijux-core" }
bijux-engine = { path = "../bijux-engine" }
bijux-environment = { path = "../bijux-environment" }
bijux-analyze = { path = "../bijux-analyze" }
bijux-planner-fastq = { path = "../bijux-planner-fastq" }
bijux-planner-bam = { path = "../bijux-planner-bam" }
bijux-runner = { path = "../bijux-runner" }
bijux-pipelines = { path = "../bijux-pipelines" }
bijux-infra = { path = "../bijux-infra" }
bijux-runtime = { path = "../bijux-runtime" }

[features]
bam_downstream = ["bijux-planner-bam/bam_downstream", "bijux-pipelines/bam_downstream"]
api_internal = []

[dev-dependencies]
insta = "1"
walkdir = { workspace = true }
bijux-guardrails = { path = "../bijux-guardrails" }
tempfile = { workspace = true }

[lints]
workspace = true
