[package]
name = "bijux-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
bijux-core = { path = "../bijux-core" }
bijux-stage-contract = { path = "../bijux-stage-contract" }
bijux-engine = { path = "../bijux-engine" }
bijux-environment = { path = "../bijux-environment" }
bijux-environment-qa = { path = "../bijux-environment-qa" }
bijux-analyze = { path = "../bijux-analyze" }
bijux-benchmark = { path = "../bijux-benchmark" }
bijux-planner-fastq = { path = "../bijux-planner-fastq" }
bijux-planner-bam = { path = "../bijux-planner-bam" }
bijux-runner = { path = "../bijux-runner" }
bijux-pipelines = { path = "../bijux-pipelines" }
bijux-infra = { path = "../bijux-infra" }
bijux-runtime = { path = "../bijux-runtime" }

[features]
bam_downstream = ["bijux-planner-bam/bam_downstream", "bijux-pipelines/bam_downstream"]
bench = []
docker-runner = []
report-html = []
api_internal = []
default = []

[dev-dependencies]
insta = { version = "1", features = ["json"] }
walkdir = { workspace = true }
bijux-policies = { path = "../bijux-policies" }
tempfile = { workspace = true }

[lints]
workspace = true
