[package]
name = "bijux-benchmark-model"
version = "0.1.0"
edition = "2021"

rust-version.workspace = true
[dependencies]
anyhow = { workspace = true }
fastrand = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bijux-analyze = { path = "../bijux-analyze" }

[lints]
workspace = true
