[package]
name = "bijux-benchmark-model"
version = "0.1.0"
edition = "2021"

license.workspace = true
rust-version.workspace = true
[dependencies]
anyhow = { workspace = true }
fastrand = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bijux-analyze = { path = "../bijux-analyze" }

[lints]
workspace = true

[dev-dependencies]
bijux-policies = { path = "../bijux-policies" }
bijux-core = { path = "../bijux-core" }
bijux-testkit = { path = "../bijux-testkit" }
