[package]
name = "bijux-benchmark"
version = "0.1.0"
edition = "2021"

rust-version.workspace = true
[dependencies]
anyhow = { workspace = true }
fastrand = "2"
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bijux-core = { path = "../bijux-core" }
bijux-analyze = { path = "../bijux-analyze" }
bijux-infra = { path = "../bijux-infra" }
bijux-runtime = { path = "../bijux-runtime" }
bijux-benchmark-model = { path = "../bijux-benchmark-model" }

[dev-dependencies]
bijux-policies = { path = "../bijux-policies" }
insta = { version = "1", features = ["json"] }
walkdir.workspace = true
bijux-domain-fastq = { path = "../bijux-domain-fastq" }
bijux-domain-bam = { path = "../bijux-domain-bam" }
