[package]
name = "bijux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "bijux"

[dependencies]
bijux-api = { path = "../bijux-api" }
bijux-environment = { path = "../bijux-environment" }
bijux-infra = { path = "../bijux-infra" }
bijux-core = { path = "../bijux-core" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde_json.workspace = true
serde.workspace = true

[features]
bam_downstream = ["bijux-api/bam_downstream"]

[dev-dependencies]
bijux-guardrails = { path = "../bijux-guardrails" }
assert_cmd = "2"
tempfile = "3"
predicates = "3"
bijux-infra = { path = "../bijux-infra" }
insta.workspace = true

[lints]
workspace = true
