[package]
name = "bijux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "bijux"

[dependencies]
bijux-api = { path = "../bijux-api" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[features]
bam_downstream = ["bijux-api/bam_downstream"]
bench = ["bijux-api/bench"]
docker-runner = ["bijux-api/docker-runner"]
report-html = ["bijux-api/report-html"]
default = []

[dev-dependencies]
bijux-core = { path = "../bijux-core" }
bijux-policies = { path = "../bijux-policies" }
tempfile = "3"
predicates = "3"
insta = { workspace = true }
[lints]
workspace = true
