[package]
name = "bijux-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
walkdir.workspace = true
sysinfo.workspace = true
sha2.workspace = true
regex.workspace = true
anyhow.workspace = true
bijux-infra = { path = "../bijux-infra" }

[dev-dependencies]
bijux-guardrails = { path = "../bijux-guardrails" }
bijux-analyze = { path = "../bijux-analyze" }
tempfile.workspace = true

[lints]
workspace = true
