[package]
name = "bijux-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
walkdir.workspace = true
sysinfo.workspace = true
sha2.workspace = true
regex.workspace = true
anyhow.workspace = true
bijux-infra = { path = "../bijux-infra", features = ["yaml"] }
opentelemetry = { workspace = true, optional = true }

[features]
otel = ["opentelemetry"]

[dev-dependencies]
bijux-policies = { path = "../bijux-policies" }
tempfile.workspace = true
insta.workspace = true

[lints]
workspace = true
