[package]
name = "bijux-dev-dna"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
regex.workspace = true
serde.workspace = true
sha2.workspace = true
toml.workspace = true
walkdir.workspace = true

[lints]
workspace = true
