[package]
name = "bijux-dna-analyze"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.40", optional = true }
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-domain-bam = { path = "../bijux-dna-domain-bam" }
bijux-dna-domain-fastq = { path = "../bijux-dna-domain-fastq" }
bijux-dna-infra = { path = "../bijux-dna-infra" }
bijux-dna-runtime = { path = "../bijux-dna-runtime" }
bijux-dna-pipelines = { path = "../bijux-dna-pipelines" }
parquet = { version = "58", optional = true, features = ["json"] }

[features]
parquet = ["dep:parquet"]
sqlite = ["dep:rusqlite"]

[[bin]]
name = "bijux-dna-verify"
path = "src/api/external_verifier_bin.rs"

[dev-dependencies]
bijux-dna-policies = { path = "../bijux-dna-policies" }
bijux-dna-testkit = { path = "../bijux-dna-testkit" }
tempfile.workspace = true
insta = { version = "1", features = ["json"] }
bijux-dna-planner-fastq = { path = "../bijux-dna-planner-fastq" }
bijux-dna-planner-bam = { path = "../bijux-dna-planner-bam" }
bijux-dna-bench = { path = "../bijux-dna-bench" }
walkdir.workspace = true
toml.workspace = true

[lints]
workspace = true
