[package]
name = "bijux-dna-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata = "0.18"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-domain-bam = { path = "../bijux-dna-domain-bam" }
bijux-dna-domain-fastq = { path = "../bijux-dna-domain-fastq" }
bijux-dna-stage-contract = { path = "../bijux-dna-stage-contract" }
bijux-dna-engine = { path = "../bijux-dna-engine" }
bijux-dna-environment = { path = "../bijux-dna-environment" }
bijux-dna-analyze = { path = "../bijux-dna-analyze", features = ["sqlite"] }
bijux-dna-benchmark = { path = "../bijux-dna-benchmark" }
bijux-dna-planner-fastq = { path = "../bijux-dna-planner-fastq" }
bijux-dna-planner-bam = { path = "../bijux-dna-planner-bam" }
bijux-dna-runner = { path = "../bijux-dna-runner" }
bijux-dna-pipelines = { path = "../bijux-dna-pipelines" }
bijux-dna-infra = { path = "../bijux-dna-infra", features = ["tracing"] }
bijux-dna-runtime = { path = "../bijux-dna-runtime" }
bijux-dna-policies = { path = "../bijux-dna-policies" }

[features]
bam_downstream = ["bijux-dna-planner-bam/bam_downstream", "bijux-dna-pipelines/bam_downstream"]
bench = []
docker-runner = []
report-html = []
api_internal = []
default = []

[dev-dependencies]
insta = { version = "1", features = ["json"] }
walkdir = { workspace = true }
bijux-dna-policies = { path = "../bijux-dna-policies" }
tempfile = { workspace = true }
bijux-dna-testkit = { path = "../bijux-dna-testkit" }

[lints]
workspace = true
