[package]
name = "bijux-dna-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
regex.workspace = true
walkdir.workspace = true
flate2.workspace = true
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-domain-bam = { path = "../bijux-dna-domain-bam" }
bijux-dna-domain-fastq = { path = "../bijux-dna-domain-fastq" }
bijux-dna-domain-vcf = { path = "../bijux-dna-domain-vcf" }
bijux-dna-stage-contract = { path = "../bijux-dna-stage-contract" }
bijux-dna-stages-vcf = { path = "../bijux-dna-stages-vcf" }
bijux-dna-engine = { path = "../bijux-dna-engine" }
bijux-dna-environment = { path = "../bijux-dna-environment" }
bijux-dna-analyze = { path = "../bijux-dna-analyze", features = ["sqlite"] }
bijux-dna-planner-fastq = { path = "../bijux-dna-planner-fastq" }
bijux-dna-planner-bam = { path = "../bijux-dna-planner-bam" }
bijux-dna-runner = { path = "../bijux-dna-runner" }
bijux-dna-pipelines = { path = "../bijux-dna-pipelines" }
bijux-dna-infra = { path = "../bijux-dna-infra", features = ["tracing"] }
bijux-dna-runtime = { path = "../bijux-dna-runtime" }

[features]
bam_downstream = ["bijux-dna-planner-bam/bam_downstream", "bijux-dna-pipelines/bam_downstream"]
bench = []
docker-runner = []
report-html = []
api_internal = []
default = []

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
tempfile = { workspace = true }
bijux-dna-testkit.workspace = true
bijux-dna-policies.workspace = true

[lints]
workspace = true
