[package]
name = "bijux-dna-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
regex.workspace = true
walkdir.workspace = true
flate2.workspace = true
bijux-dna-core.workspace = true
bijux-dna-domain-bam.workspace = true
bijux-dna-domain-fastq.workspace = true
bijux-dna-domain-vcf.workspace = true
bijux-dna-stage-contract.workspace = true
bijux-dna-stages-vcf.workspace = true
bijux-dna-engine.workspace = true
bijux-dna-environment.workspace = true
bijux-dna-analyze = { workspace = true, features = ["sqlite"] }
bijux-dna-planner-fastq.workspace = true
bijux-dna-planner-bam.workspace = true
bijux-dna-runner.workspace = true
bijux-dna-pipelines.workspace = true
bijux-dna-infra = { workspace = true, features = ["tracing"] }
bijux-dna-runtime.workspace = true

[features]
bam_downstream = ["bijux-dna-planner-bam/bam_downstream", "bijux-dna-pipelines/bam_downstream"]
bench = []
docker-runner = []
report-html = []
api_internal = []
default = []

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
tempfile = { workspace = true }
sysinfo.workspace = true
bijux-dna-testkit.workspace = true
bijux-dna-policies.workspace = true

[lints]
workspace = true
