[package]
name = "bijux-dna-bench-model"
version = "0.1.0"
edition = "2021"

license.workspace = true
rust-version.workspace = true
[dependencies]
anyhow = { workspace = true }
fastrand = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bijux-dna-analyze = { path = "../bijux-dna-analyze" }

[lints]
workspace = true

[dev-dependencies]
bijux-dna-policies = { path = "../bijux-dna-policies" }
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-testkit = { path = "../bijux-dna-testkit" }
