[package]
name = "bijux-dna-bench"
version = "0.1.0"
edition = "2021"

license.workspace = true
rust-version.workspace = true
[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-infra = { path = "../bijux-dna-infra" }
bijux-dna-runtime = { path = "../bijux-dna-runtime" }
bijux-dna-bench-model = { path = "../bijux-dna-bench-model" }
toml = { workspace = true }

[dev-dependencies]
bijux-dna-analyze = { path = "../bijux-dna-analyze" }
bijux-dna-policies = { path = "../bijux-dna-policies" }
insta = { version = "1", features = ["json"] }
tempfile = { workspace = true }
walkdir.workspace = true
bijux-dna-domain-fastq = { path = "../bijux-dna-domain-fastq" }
bijux-dna-domain-bam = { path = "../bijux-dna-domain-bam" }
bijux-dna-testkit = { path = "../bijux-dna-testkit" }
