[package]
name = "bijux-dna"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "bijux-dna"

[[bin]]
name = "bijux-dna"
path = "src/main.rs"

[dependencies]
bijux-dna-api = { path = "../bijux-dna-api" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[features]
bam_downstream = ["bijux-dna-api/bam_downstream"]
bench = ["bijux-dna-api/bench"]
docker-runner = ["bijux-dna-api/docker-runner"]
report-html = ["bijux-dna-api/report-html"]
default = []

[dev-dependencies]
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-policies = { path = "../bijux-dna-policies" }
tempfile = "3"
predicates = "3"
insta = { workspace = true }
gag = "1"
[lints]
workspace = true
