[package]
name = "bijux-dna"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "bijux-dna"

[[bin]]
name = "bijux-dna"
path = "src/main.rs"

[dependencies]
bijux-dna-api = { path = "../bijux-dna-api" }
bijux-dna-domain-compiler = { path = "../bijux-dna-domain-compiler" }
bijux-dna-runtime = { path = "../bijux-dna-runtime" }
bijux-dna-infra = { path = "../bijux-dna-infra" }
bijux-dna-domain-vcf = { path = "../bijux-dna-domain-vcf" }
bijux-dna-stages-vcf = { path = "../bijux-dna-stages-vcf" }
bijux-dna-db-ena = { path = "../bijux-dna-db-ena" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
tar = "0.4"
flate2 = "1"

[features]
bam_downstream = ["bijux-dna-api/bam_downstream"]
bench = ["bijux-dna-api/bench"]
docker-runner = ["bijux-dna-api/docker-runner"]
report-html = ["bijux-dna-api/report-html"]
default = []

[dev-dependencies]
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-policies = { path = "../bijux-dna-policies" }
tempfile = "3"
predicates = "3"
insta = { workspace = true }
gag = "1"
[lints]
workspace = true
