[package]
name = "bijux-dna-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
walkdir.workspace = true
sysinfo = { workspace = true, optional = true }
sha2.workspace = true
regex.workspace = true
anyhow.workspace = true
bijux-dna-infra = { path = "../bijux-dna-infra", features = ["yaml"] }
opentelemetry = { workspace = true, optional = true }

[features]
otel = ["opentelemetry"]
sysinfo = ["dep:sysinfo"]

[dev-dependencies]
bijux-dna-policies = { path = "../bijux-dna-policies" }
tempfile.workspace = true
insta.workspace = true

[lints]
workspace = true
