[package]
name = "bijux-dna-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
walkdir.workspace = true
sha2.workspace = true
regex.workspace = true
tempfile.workspace = true

[dev-dependencies]
anyhow.workspace = true
bijux-dna-policies = { path = "../bijux-dna-policies" }
insta.workspace = true

[lints]
workspace = true
