[package]
name = "bijux-dna-db-ena"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "bijux-dna-db-ena"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rayon = "1"

[dev-dependencies]
bijux-dna-policies = { path = "../bijux-dna-policies" }

[lints]
workspace = true
