[package]
name = "bijux-dna-db-ena"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "bijux-dna-db-ena"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bijux-dna-policies = { path = "../bijux-dna-policies" }

[lints]
workspace = true
