[package]
name = "bijux-dna-dev"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bijux-dna-core = { path = "../bijux-dna-core" }
bijux-dna-infra = { path = "../bijux-dna-infra" }
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
bijux-dna-policies.workspace = true

[lints]
workspace = true
