[package]
name = "bijux-dna-dev"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bijux-dna-api.workspace = true
bijux-dna-core.workspace = true
bijux-dna-db-ena.workspace = true
bijux-dna-db-ref = { path = "../bijux-dna-db-ref" }
bijux-dna-infra.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
bijux-dna-policies.workspace = true

[lints]
workspace = true
